fix(k8s): fixed local registry imagePullErr
